<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="@drawable/ic_backgroud"
    xmlns:android="http://schemas.android.com/apk/res/android">



    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="76dp"
        android:layout_marginRight="96dp"
        android:text="@string/login_tiltle"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="96dp" />

    <TextView
        android:id="@+id/textViewSubTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="5dp"
        android:text="@string/login_sub_tiltle"
        android:textSize="20sp"
        android:textStyle="normal"
        app:layout_constraintStart_toStartOf="@+id/textViewTitle"
        app:layout_constraintTop_toBottomOf="@+id/textViewTitle" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/layout"

        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"

        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewSubTitle">


        <TextView
            android:id="@+id/textViewTitleName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:text="@string/username_tiltle"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/layoutFieldUsername"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewTitleName"
            android:background="@drawable/border_set"

            android:padding="5dp">

            <ImageView
                android:id="@+id/iconUsername"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:contentDescription="@string/icon_user_description"
                app:srcCompat="@drawable/ic_user"
                tools:ignore="VectorDrawableCompat"
                />

            <EditText
                android:id="@+id/editTextUserName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName"
                android:hint="@string/username_hint"
                android:background="@android:color/transparent"
                android:autofillHints="" />

        </LinearLayout>

        <TextView
            android:id="@+id/textViewTitlePassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:text="@string/password_title"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="@+id/layoutFieldUsername"
            app:layout_constraintTop_toBottomOf="@+id/layoutFieldUsername" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintLeft_toLeftOf="@+id/textViewTitlePassword"
            app:layout_constraintStart_toStartOf="@+id/textViewTitlePassword"
            app:layout_constraintTop_toBottomOf="@+id/textViewTitlePassword"
            android:background="@drawable/border_set"
            android:padding="5dp">

            <ImageView
                android:id="@+id/iconPassword"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:contentDescription="@string/icon_password_description"
                app:srcCompat="@drawable/ic_password"
                tools:ignore="VectorDrawableCompat" />

            <EditText
                android:id="@+id/editTextPassword"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/password_hint"
                android:inputType="textPassword"
                android:background="@android:color/transparent"
                android:autofillHints="" />
            <TextView
                android:id="@+id/textViewForgot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/forgot"
                android:textColor="@color/bluePrimary"
                android:textSize="20sp"
                android:textStyle="bold"



                />

        </LinearLayout>



    </androidx.constraintlayout.widget.ConstraintLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"

        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="@+id/layout"
        app:layout_constraintTop_toBottomOf="@+id/layout"
        android:baselineAligned="false">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center">

            <Button
                android:id="@+id/btn_skip"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="60dp"
                android:layout_marginLeft="60dp"
                android:width="0dp"
                android:background="@drawable/button"
                android:text="@string/skip"
                android:textColor="@color/whitePrimary"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.906" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center">

            <Button
                android:id="@+id/btn_log_in"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:background="@drawable/button"
                android:text="@string/login"
                android:textColor="@color/whitePrimary"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.668"
                app:layout_constraintStart_toEndOf="@+id/button"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.905" />
        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginBottom="10dp"
        android:paddingBottom="5dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginLeft="30dp"

            android:text="@string/dont_account"
            android:textSize="20sp"
            android:layout_marginStart="30dp" />

        <TextView
            android:id="@+id/textViewSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginLeft="30dp"

            android:text="@string/sign_up"
            android:textColor="@color/bluePrimary"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginStart="30dp" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginBottom="10dp"
        android:paddingBottom="5dp"

        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="15dp"
        android:layout_marginStart="15dp">

        <ImageView
            android:id="@+id/backArrow"
            android:layout_width="45dp"
            android:layout_height="35dp"
            android:contentDescription="@string/back_description"
            app:srcCompat="@drawable/ic_back_arrow"
            tools:ignore="VectorDrawableCompat"
            />



    </LinearLayout>

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guidelineHorizontal"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.42"/>
    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guidelineVertival"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.42"/>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="0dp"
        android:visibility="invisible"
        android:layout_marginBottom="0dp"
        app:layout_constraintTop_toBottomOf="@id/guidelineHorizontal"
        app:layout_constraintLeft_toRightOf="@id/guidelineVertival"
        android:layout_marginEnd="0dp" />



</androidx.constraintlayout.widget.ConstraintLayout>