<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.mobile.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_important"
        android:name="com.example.mobile.ui.important.ImportantFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_important"

        />
    <fragment
            android:id="@+id/nav_receive"
            android:name="com.example.mobile.ui.receive.ReceiveFragment"
            tools:layout="@layout/fragment_receive"
            android:label="Receive"/>
    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.mobile.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow">
        <action android:id="@+id/action_package_to_notes"
            app:destination="@id/nav_new_note"
            app:popUpTo="@+id/nav_new_note"
            app:popUpToInclusive="true"/>
    </fragment>


    <fragment
        android:id="@+id/nav_new_note"
        android:name="com.example.mobile.ui.slideshow.NoteFragment"
        tools:layout="@layout/fragment_notes"

    />
    <fragment android:id="@+id/nav_shared" android:name="com.example.mobile.ui.shared.SharedFragment"
              android:label="fragment_shared" tools:layout="@layout/fragment_shared"/>

</navigation>