<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/whitePrimary"
    tools:context=".ui.home.HomeFragment">

    <LinearLayout
        android:id="@+id/linearlayout_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:text="@string/tab_note_title"
            android:textSize="16sp"
            app:drawableLeftCompat="@drawable/ic_note" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="end">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"

                android:text="@string/show_all"
                android:textColor="@color/bluePrimary"
                android:textSize="16sp" />
        </LinearLayout>


    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"

        android:layout_marginTop="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearlayout_header"
        app:layout_constraintVertical_bias="1.0"
        tools:layout_editor_absoluteX="99dp">

        <GridLayout
            android:id="@+id/grid_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:alignmentMode="alignMargins"
            android:columnCount="3"
            android:useDefaultMargins="true">

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardElevation="0dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"

                    android:drawablePadding="5dp"
                    android:text="@string/create_note"
                    android:textAlignment="center"
                    android:textSize="16sp"
                    app:drawableTopCompat="@drawable/ic_add_note" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardElevation="0dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"

                    android:drawablePadding="5dp"
                    android:text="@string/create_note"
                    android:textAlignment="center"
                    android:textSize="16sp"
                    app:drawableTopCompat="@drawable/ic_green" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardElevation="0dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"

                    android:drawablePadding="5dp"
                    android:text="@string/create_note"
                    android:textAlignment="center"
                    android:textSize="16sp"
                    app:drawableTopCompat="@drawable/ic_blue" />
            </androidx.cardview.widget.CardView>


        </GridLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>