<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="@drawable/ic_backgroud"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="170dp"
        android:layout_marginRight="96dp"
        android:text="Forgot Password"

        android:textSize="36sp"
        android:textStyle="bold"

        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewSubTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="5dp"
        android:text=""
        android:textSize="20sp"
        android:textStyle="normal"
        app:layout_constraintStart_toStartOf="@+id/textViewTitle"
        app:layout_constraintTop_toBottomOf="@+id/textViewTitle" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"

        android:layout_marginTop="8dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewSubTitle">


        <TextView
            android:id="@+id/textViewTitleEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:text="ENTER YOUR EMAIL ADDRESS"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/layoutFieldEmail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:background="@drawable/border_set"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="5dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintStart_toStartOf="@+id/textViewTitleEmail"

            app:layout_constraintTop_toBottomOf="@+id/textViewTitleEmail">

            <ImageView

                android:layout_width="30dp"
                android:layout_height="30dp"
                android:contentDescription="@string/icon_user_description"
                app:srcCompat="@drawable/ic_user"
                tools:ignore="VectorDrawableCompat" />

            <EditText
                android:id="@+id/editTextEmail"
                android:layout_width="341dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:ems="10"
                android:hint="@string/email_hint"
                android:inputType="textPersonName" />

        </LinearLayout>









    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"

        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="@+id/layout"
        app:layout_constraintTop_toBottomOf="@+id/layout">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center">


        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center">

            <Button
                android:id="@+id/btn_next"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:background="@drawable/button"
                android:text="@string/next"
                android:textAllCaps="false"
                android:textColor="@color/whitePrimary"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.668"
                app:layout_constraintStart_toEndOf="@+id/button"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.905" />
        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginBottom="10dp"
        android:paddingBottom="5dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">


    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginBottom="10dp"
        android:paddingBottom="5dp"
        android:gravity="left"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="15dp"
        >

        <ImageView
            android:id="@+id/backArrow"
            android:layout_width="45dp"
            android:layout_height="35dp"
            android:contentDescription=""
            app:srcCompat="@drawable/ic_back_arrow"
            tools:ignore="VectorDrawableCompat"
            />



    </LinearLayout>
    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guidelineHorizontal"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.42"/>
    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guidelineVertival"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.42"/>

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="0dp"
            android:layout_marginBottom="0dp"
            app:layout_constraintTop_toBottomOf="@id/guidelineHorizontal"
            app:layout_constraintLeft_toRightOf="@id/guidelineVertival" />



</androidx.constraintlayout.widget.ConstraintLayout>